# s_test

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.local  README.md  docker-compose.yml
.claude/: settings.local.json
contracts/: evidence_card.schema.json  order_plan.schema.json  scenario_output.schema.json
crates/api/: Cargo.toml
crates/api/src/: auth.rs  error.rs  main.rs  state.rs
crates/api/src/routes/: analysis_reports.rs  auth.rs  health.rs  holdings.rs  llm_keys.rs  manager_universe.rs  managers.rs  mod.rs  order_plans.rs  paper_orders.rs  scenarios.rs  schedule_api.rs  symbols.rs  trade_cycles.rs  trades.rs
crates/app/: Cargo.toml
crates/app/src/: error.rs  lib.rs
crates/app/src/repo/: analysis_report.rs  audit_log.rs  broker_connection.rs  broker_order.rs  holdings.rs  manager.rs  manager_universe.rs  mod.rs  order_plan.rs  scenario.rs  schedule.rs  secret_key.rs  symbol.rs  trade_cycle.rs  trades.rs  user.rs
crates/app/src/service/: broker_factory.rs  llm_key.rs  manager.rs  mod.rs  notification.rs  order_plan.rs  risk.rs  scenario.rs  secret.rs
crates/domain/: Cargo.toml
crates/domain/src/model/: broker.rs  manager.rs  manager_universe.rs  market.rs  mod.rs  order.rs  risk.rs  scenario.rs  schedule.rs  symbol.rs  trade_cycle.rs  user.rs
crates/domain/src/port/: broker.rs  disclosure.rs  llm.rs  mod.rs  news.rs  notification.rs
crates/infra/: Cargo.toml
crates/infra/src/: broker_factory.rs  lib.rs
crates/infra/src/crypto/: aes_gcm.rs  mod.rs
crates/infra/src/db/: mod.rs  pg_pool.rs
crates/infra/src/db/repo/: analysis_report.rs  audit_log.rs  broker_connection.rs  broker_order.rs  holdings.rs  manager.rs  manager_universe.rs  mod.rs  order_plan.rs  scenario.rs  schedule.rs  schedule_mgmt.rs  secret_key.rs  symbol.rs  trade_cycle.rs  trades.rs  user.rs
crates/infra/src/kis/: client.rs  dto.rs  mod.rs  paper_broker.rs
crates/infra/src/kis/fixtures/: domestic_balance_sample.json  domestic_quote_sample.json  order_fills_sample.json  overseas_balance_sample.json  overseas_quote_sample.json
crates/infra/src/providers/: dart.rs  mock_notification.rs  mod.rs  naver_finance.rs  naver_news.rs  sec_edgar.rs  telegram.rs
crates/infra/src/scenario/: evidence_builder.rs  gemini_llm.rs  mock_llm.rs  mod.rs  openai_llm.rs  schema_validator.rs
crates/web/: Cargo.toml  Trunk.toml  index.html
crates/web/src/: app.rs  lib.rs  main.rs
crates/web/src/api/: client.rs  types.rs
crates/web/src/components/: badge.rs  layout.rs  mod.rs  nav.rs  symbol_search.rs
crates/web/src/pages/: home.rs  llm_keys.rs  manager_new.rs  managers.rs  mod.rs  not_found.rs  settings.rs
crates/web/src/pages/manager/: analysis.rs  detail.rs  holdings.rs  mod.rs  scenarios.rs  schedule.rs  settings.rs  trades.rs  universe.rs
crates/web/style/: lumos.css
crates/worker/: Cargo.toml
crates/worker/src/: main.rs  scheduler.rs
db/: schema_v1.sql
docs/: architecture.md  data_ingestion_design.md  risk_policy.md  schedule_design.md
docs/api_specs/: kis_open_api.md  llm_structured_outputs.md  naver_news.md  opendart.md  sec_edgar.md  source_manifest.md  telegram.md
docs/db/: data_model_notes.md
docs/tasks/: claude_code_tasks.md  codex_vertical_slices.md  offline_dev_setup.md
fixtures/: README.md
migrations/: 20240101000000_initial_schema.sql  20240102000000_default_user.sql  20240103000000_trade_cycles.sql
prompts/: risk_gate_prompt.md  scenario_system_prompt.md
scripts/: dev.sh
