[workspace]
members = [
    "crates/domain",
    "crates/app",
    "crates/infra",
    "crates/api",
    "crates/web",
    "crates/worker",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Lumos"]
license = "MIT"

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }

# web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "rust_decimal", "json", "migrate"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

# types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10" }
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = { version = "1" }

# error handling
anyhow = { version = "1" }
thiserror = { version = "1" }

# async traits
async-trait = { version = "0.1" }

# logging/tracing
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# secrets / crypto
secrecy = { version = "0.8", features = ["serde"] }
aes-gcm = { version = "0.10" }
rand = { version = "0.8" }
base64 = { version = "0.21" }

# http client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }

# config
dotenvy = { version = "0.15" }
config = { version = "0.14" }

# auth
jsonwebtoken = { version = "9" }

# leptos (frontend)
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }

# validation
validator = { version = "0.18", features = ["derive"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
