[package]
name = "lumos-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "lumos-server"
path = "src/main.rs"

[dependencies]
lumos-domain = { path = "../domain" }
lumos-app = { path = "../app" }
lumos-infra = { path = "../infra" }

anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
dotenvy.workspace = true
jsonwebtoken.workspace = true
