[package]
name = "lumos-app"
version.workspace = true
edition.workspace = true

[dependencies]
lumos-domain = { path = "../domain" }
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
tracing.workspace = true

[features]
default = []
live-trading = []

[dev-dependencies]
tokio = { workspace = true }
