[package]
name = "lumos-infra"
version.workspace = true
edition.workspace = true

[dependencies]
lumos-domain = { path = "../domain" }
lumos-app = { path = "../app" }

anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
tracing.workspace = true
tokio.workspace = true
reqwest.workspace = true
sqlx.workspace = true
secrecy.workspace = true
aes-gcm.workspace = true
rand.workspace = true
base64.workspace = true

[features]
default = ["offline-fixtures"]
offline-fixtures = []
online-kis = []
online-opendart = []
online-sec = []
online-naver = []
online-telegram = []
live-trading = []
